[package]
name = "infonode"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "infonode-server"
path = "src/server.rs"

[[bin]]
name = "infonode-client"
path = "src/client.rs"

[dependencies]
crossbeam-channel = "0.5"
tonic = "0.9"
prost = "0.11"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
futures = "0.3.28"
bigdecimal = "0.3.1"
tungstenite = { version = "0.19.0", features =["native-tls"]}
url = "2.4.0"
json = "0.12.4"
reqwest = "0.11.18"
log = "0.4"
simple_logger = "*"

[build-dependencies]
tonic-build = "0.9"
